--- a/site-cookbooks/cfc_hmaster/templates/default/hudson.tasks.Mailer.xml.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/hudson.tasks.Mailer.xml.erb
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <hudson.tasks.Mailer_-DescriptorImpl>
   <hudsonUrl>https://${profile.hostname}<%= node.cfc.hub.prefix_path %>/s/${profile.application.identifier}/hudson/</hudsonUrl>
-  <adminAddress>Cloud2Code Builder &lt;noreply@tasktop.com&gt;</adminAddress>
+  <adminAddress>Code2Cloud Builder &lt;noreply@tasktop.com&gt;</adminAddress>
   <useSsl>true</useSsl>
   <charset>UTF-8</charset>
   <smtpHost><%= node.cfc.mail_sender.host %></smtpHost>
