--- a/site-cookbooks/cfc_server/templates/default/backup-dirs.pl.erb
+++ b/site-cookbooks/cfc_server/templates/default/backup-dirs.pl.erb
@@ -23,7 +23,7 @@ my $pass_export = "export PASSPHRASE=$encrypt_pass &&";
 
 
 # Make sure there are no empty files on remote (avoids https://q.tasktop.com/alm/#projects/c2c/task/4124)
-print `ssh -p $remote_port $remote_user\@$remote_server 'find /home/backup/$environment/$hostname/dir -size 0 -exec rm {} \\;'`
+print `ssh -p $remote_port $remote_user\@$remote_server 'find /home/backup/$environment/$hostname/dir -size 0 -exec rm {} \\;'`;
 print "Sending backups to $remote_server\n";
 print `$pass_export duplicity --name dev-dirs --archive-dir $archive_dir --encrypt-key $encrypt_key <%= dirs %> --exclude '**' / scp://$remote_user\@$remote_server:$remote_port//home/backup/$environment/$hostname/dir`;
 
