4132: User can delete project https://q.tasktop.com/alm/#projects/c2c/task/4132

--- a/site-cookbooks/cfc_task/templates/default/task.properties.erb
+++ b/site-cookbooks/cfc_task/templates/default/task.properties.erb
@@ -4,6 +4,8 @@ profile.application.host=<%= cfc_profile_host %>
 profile.application.protocol=https
 profile.prefix.path=<%= node.cfc.hub.prefix_path %>
 
+database.host=<%= cfc_role_address("db") %>
+
 task.database.password=<%= node.cfc.mysql_pw.tasks %>
 task.database.url=jdbc\:mysql\://<%= cfc_role_address("db") %>\:3306
 task.database.username=tasks
