--- a/site-cookbooks/cfc_task/templates/default/liquibase-wiki.rb.erb
+++ b/site-cookbooks/cfc_task/templates/default/liquibase-wiki.rb.erb
@@ -27,13 +27,9 @@ e.Main"
   puts `#{java} #{config} clearCheckSums`
   puts `#{java} #{config} update`
 
-  con.set_server_option(Mysql::OPTION_MULTI_STATEMENTS_ON)
-  con.query("use `#{dbName}`; ALTER TABLE AttachmentContent CHANGE `size` `sizeBytes` INT(11) NOT NULL;"){|r| puts r}
-  con.query("use `#{dbName}`; update SEQUENCE set SEQ_COUNT=coalesce((select max(id) id from Page),0) where SEQ_NAME='Page';"){|r| puts r}
-  con.query("use `#{dbName}`; update SEQUENCE set SEQ_COUNT=coalesce((select max(id) id from PageContent), 0) where SEQ_NAME='PageContent';"){|r| puts r}
-  con.query("use `#{dbName}`; update SEQUENCE set SEQ_COUNT=coalesce((select max(id) id from Person), 0) where SEQ_NAME='Person';"){|r| puts r}
-  con.query("use `#{dbName}`; update SEQUENCE set SEQ_COUNT=coalesce((select max(id) id from Attachment), 0) where SEQ_NAME='Attachment';"){|r| puts r}
-  con.query("use `#{dbName}`; update SEQUENCE set SEQ_COUNT=coalesce((select max(id) id from AttachmentContent), 0) where SEQ_NAME='AttachmentContent';"){|r| puts r}
+# example on how to make sql queries as part of the migration
+#  con.set_server_option(Mysql::OPTION_MULTI_STATEMENTS_ON)
+#  con.query("use `#{dbName}`; ALTER TABLE AttachmentContent CHANGE `size` `sizeBytes` INT(11) NOT NULL;"){|r| puts r}
 
 end
 
