Externalize some properties, allow to turn off log4j error emailing

--- a/site-cookbooks/cfc_hmaster/templates/default/config.xml.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/config.xml.erb
@@ -38,11 +38,11 @@
   <clouds>
       <com.tasktop.c2c.server.hudson.plugin.cloud.C2CSlaveCloud>
 	    <name>Code2Cloud Builders</name>
-	        <slavePoolServiceBaseUrl>https://${profile.hostname}<%= node.cfc.hub.prefix_path %>/hudson</slavePoolServiceBaseUrl>
-		    <sshUser>builder</sshUser>
-		        <sshKeyFilePath>/opt/code2cloud/etc/builder_id_rsa</sshKeyFilePath>
+	        <slavePoolServiceBaseUrl><%= node.cfc.hub.protocol %>://${profile.hostname}<%= node.cfc.hub.prefix_path %>/hudson</slavePoolServiceBaseUrl>
+		    <sshUser><%= node.cfc.hslave.build_user %></sshUser>
+		    <sshKeyFilePath>/opt/code2cloud/etc/builder_id_rsa</sshKeyFilePath>
           <projectIdentifier>${profile.application.identifier}</projectIdentifier>
-          <remoteFs><%= node.cfc.user_home_prefix %>/c2c</remoteFs>
+          <remoteFS><%= node.cfc.user_home_prefix %>/c2c</remoteFS>
 	</com.tasktop.c2c.server.hudson.plugin.cloud.C2CSlaveCloud>
   </clouds>
 
