--- a/site-cookbooks/cfc_hub/templates/default/cloud.properties.erb
+++ b/site-cookbooks/cfc_hub/templates/default/cloud.properties.erb
@@ -1,4 +1,4 @@
-alm.hudsonSlave.ssh.user=builder
+alm.hudsonSlave.ssh.user=<%= node.cfc.hslave.build_user %>
 alm.hudsonSlave.ssh.keyFilePath=/opt/code2cloud/etc/builder_id_rsa
 
 alm.hudsonSlave.pool.min=1
