--- a/site-cookbooks/cfc_server/templates/default/log4j.xml.erb
+++ b/site-cookbooks/cfc_server/templates/default/log4j.xml.erb
@@ -27,6 +27,7 @@
 		</layout>
 	</appender>
 	
+	<% if node.cfc.server.email_log_errors_to_admin %>
     <!--Provides email logging to admins -->
     <appender name="EMAIL"  class="org.apache.log4j.net.SMTPAppender">
         <param name="BufferSize" value="512" />
@@ -47,6 +48,7 @@
             <param name="LevelMax" value="FATAL"/>
         </filter>
     </appender>
+	<% end %>
 	
 	
 	<!-- ============================== -->
@@ -81,7 +83,10 @@
 	<root>
 		<level value="INFO" />
 		<appender-ref ref="FILE" />
+		<% if node.cfc.server.email_log_errors_to_admin %>
 		<appender-ref ref="EMAIL" />
+		<% end %>
+		
 		
 	</root>
 
