Fix config for hudson url to allow not https

--- a/site-cookbooks/cfc_hmaster/templates/default/hudson.tasks.Mailer.xml.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/hudson.tasks.Mailer.xml.erb
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <hudson.tasks.Mailer_-DescriptorImpl>
-  <hudsonUrl>https://${profile.hostname}<%= node.cfc.hub.prefix_path %>/s/${profile.application.identifier}/hudson/</hudsonUrl>
+  <hudsonUrl><%= node.cfc.hub.protocol %>://${profile.hostname}<%= node.cfc.hub.prefix_path %>/s/${profile.application.identifier}/hudson/</hudsonUrl>
   <adminAddress>Code2Cloud Builder &lt;noreply@tasktop.com&gt;</adminAddress>
   <useSsl>true</useSsl>
   <charset>UTF-8</charset>
