--- a/site-cookbooks/cfc_hmaster/templates/default/updateHudsonWars.sh.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/updateHudsonWars.sh.erb
@@ -2,9 +2,9 @@
 
 #Script to update the existing hudson wars with the new template. Container should already be stopped
 
-HUDSON_BASE_DIR=/home/code2cloud/hudson-homes/
-HUDSON_TEMPLATE_WAR=/opt/code2cloud/configuration/template/hudson-war/hudson.war
-HUDSON_WEBAPPS_DIR=/opt/code2cloud/webapps
+HUDSON_BASE_DIR=<%= node.cfc.hmaster.builds_dir %>/
+HUDSON_TEMPLATE_WAR=<%= node.cfc.server.opt %>/configuration/template/hudson-war/hudson.war
+HUDSON_WEBAPPS_DIR=<%= node.cfc.server.opt %>/webapps
 
 EXISTING_WEBAPPS=`ls $HUDSON_WEBAPPS_DIR/*hudson.war`
 
@@ -16,7 +16,11 @@ rm -rf $HUDSON_WEBAPPS_DIR/*hudson
 
 for WEBAPP in $EXISTING_WEBAPPS
 do
-    APPID=${WEBAPP#$HUDSON_WEBAPPS_DIR/alm#s#}
+	<% if node.cfc.hub.prefix_path = "" -%>
+    APPID=${WEBAPP#$HUDSON_WEBAPPS_DIR/s#}
+    <% else -%>
+    APPID=${WEBAPP#$HUDSON_WEBAPPS_DIR<%= node.cfc.hub.prefix_path %>#s#}
+    <% end -%>
     APPID=${APPID%#hudson.war}
 
     echo Updating webapp $WEBAPP for app $APPID
@@ -28,7 +32,7 @@ do
     jar -xf hudson.war WEB-INF/web.xml
     
     # Place the hudson home for this app in the web.xml
-    sed "s_<env-entry-value>_<env-entry-value>$HUDSON_BASE_DIR$APPID _" WEB-INF/web.xml > WEB-INF/web.xml.mod
+    sed "s,<env-entry-value>,<env-entry-value>$HUDSON_BASE_DIR$APPID ," WEB-INF/web.xml > WEB-INF/web.xml.mod
     mv  WEB-INF/web.xml.mod  WEB-INF/web.xml
 
     jar -uf hudson.war WEB-INF/web.xml
