task 4565: Commit on external repository doesn't work https://q.tasktop.com/alm/#projects/c2c/task/4565
Support to get http proxy environment into tomcat.

--- a/site-cookbooks/cfc_server/templates/default/default_tomcat6.erb
+++ b/site-cookbooks/cfc_server/templates/default/default_tomcat6.erb
@@ -62,3 +62,12 @@ JVM_TMP=<%= node["tomcat"]["tmp_dir"] %>
 # NOTE: authbind works only with IPv4.  Do not enable it when using IPv6.
 # (yes/no, default: no)
 AUTHBIND=<%= node["cfc"]["tomcat"]["authbind"] %>
+<% if node["cfc"]["server"]["http_proxy"] -%>
+HTTP_PROXY=<%= node["cfc"]["server"]["http_proxy"] %>
+http_proxy=<%= node["cfc"]["server"]["http_proxy"] %>
+<%- end %>
+<% if node["cfc"]["server"]["https_proxy"] -%>
+HTTPS_PROXY=<%= node["cfc"]["server"]["https_proxy"] %>
+https_proxy=<%= node["cfc"]["server"]["https_proxy"] %>
+<%- end %>
+
