4575: updateHudsonWar scipts fails on IEA enviormnt https://q.tasktop.com/alm/#projects/c2c/task/4575

--- a/site-cookbooks/cfc_hmaster/templates/default/updateHudsonWars.sh.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/updateHudsonWars.sh.erb
@@ -37,7 +37,7 @@ do
 
     jar -uf hudson.war WEB-INF/web.xml
     mv hudson.war $WEBAPP
-    chown  tomcat6:tomcat6 $WEBAPP 
+    chown <%= node.cfc.user %>:<%= node.cfc.user %> $WEBAPP 
     rm -rf $TEMP_WAR_LOCATION
 done
 
