--- a/site-cookbooks/cfc_hmaster/templates/default/config.xml.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/config.xml.erb
@@ -8,20 +8,27 @@
     <permission>hudson.model.Hudson.Administer:ROLE_ADMIN</permission>
     <permission>hudson.model.Hudson.Read:ROLE_ADMIN</permission>
     <permission>hudson.model.Hudson.Read:ROLE_USER</permission>
+    <permission>hudson.model.Hudson.Read:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Hudson.Read:ROLE_OBSERVER</permission>
     <permission>hudson.model.Item.Build:ROLE_ADMIN</permission>
     <permission>hudson.model.Item.Build:ROLE_USER</permission>
+    <permission>hudson.model.Item.Build:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Item.Configure:ROLE_ADMIN</permission>
     <permission>hudson.model.Item.Configure:ROLE_USER</permission>
+    <permission>hudson.model.Item.Configure:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Item.Create:ROLE_ADMIN</permission>
     <permission>hudson.model.Item.Create:ROLE_USER</permission>
+    <permission>hudson.model.Item.Create:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Item.Delete:ROLE_ADMIN</permission>
     <permission>hudson.model.Item.Delete:ROLE_USER</permission>
+    <permission>hudson.model.Item.Delete:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Item.Read:ROLE_ADMIN</permission>
     <permission>hudson.model.Item.Read:ROLE_USER</permission>
+    <permission>hudson.model.Item.Read:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Item.Read:ROLE_OBSERVER</permission>
     <permission>hudson.model.Item.Workspace:ROLE_ADMIN</permission>
     <permission>hudson.model.Item.Workspace:ROLE_USER</permission>
+    <permission>hudson.model.Item.Workspace:ROLE_COMMUNITY</permission>
     <permission>hudson.model.Run.Delete:ROLE_ADMIN</permission>
     <permission>hudson.model.Run.Update:ROLE_ADMIN</permission>
     <permission>hudson.model.View.Configure:ROLE_ADMIN</permission>
@@ -29,6 +36,7 @@
     <permission>hudson.model.View.Delete:ROLE_ADMIN</permission>
     <permission>hudson.scm.SCM.Tag:ROLE_ADMIN</permission>
     <permission>hudson.scm.SCM.Tag:ROLE_USER</permission>
+    <permission>hudson.scm.SCM.Tag:ROLE_COMMUNITY</permission>
   </authorizationStrategy>
   <securityRealm class="com.tasktop.c2c.server.hudson.plugin.auth.AlmPreauthenticationSecurityRealm"/>
   <systemMessage></systemMessage>
