--- a/site-cookbooks/cfc_hub/templates/default/profile.properties.erb
+++ b/site-cookbooks/cfc_hub/templates/default/profile.properties.erb
@@ -13,8 +13,8 @@ alm.database.password=<%= node.cfc.mysql_pw.profile %>
 alm.database.url=jdbc\:<%= node.cfc.server.jdbc_type %>//<%= cfc_role_address("db") %>\:<%= node.cfc.server.jdbc_port %><%= node.cfc.hub.jdbc_path %>
 alm.database.username=profile
 
-alm.mailSender.javaMailProperties[mail.smtp.starttls.enable]=true
-alm.mailSender.port=587
+alm.mailSender.javaMailProperties[mail.smtp.starttls.enable]=<%= node.cfc.mail_sender.starttls %>
+alm.mailSender.port=<%= node.cfc.mail_sender.port %>
 alm.mailSender.host=<%= node.cfc.mail_sender.host %>
 alm.mailSender.username=<%= node.cfc.mail_sender.username %>
 alm.mailSender.password=<%= node.cfc.mail_sender.password %>
