task 4614: Update email templates and sender for OPC https://q.tasktop.com/alm/#projects/c2c/task/4614

--- a/site-cookbooks/cfc_hub/templates/default/profile.properties.erb
+++ b/site-cookbooks/cfc_hub/templates/default/profile.properties.erb
@@ -18,7 +18,7 @@ alm.mailSender.port=<%= node.cfc.mail_sender.port %>
 alm.mailSender.host=<%= node.cfc.mail_sender.host %>
 alm.mailSender.username=<%= node.cfc.mail_sender.username %>
 alm.mailSender.password=<%= node.cfc.mail_sender.password %>
-alm.mailSender.from="Code2Cloud Team" <noreply@tasktop.com>
+alm.mailSender.from=<%= node.cfc.mail_sender.from %>
 
 alm.rememberMeServices.key=<%= node.cfc.hub.remember_me_key %>
 
