--- a/site-cookbooks/cfc_hmaster/templates/default/updateHudsonWars.sh.erb
+++ b/site-cookbooks/cfc_hmaster/templates/default/updateHudsonWars.sh.erb
@@ -37,7 +37,7 @@ do
 
     jar -uf hudson.war WEB-INF/web.xml
     mv hudson.war $WEBAPP
-    chown <%= node.cfc.user %>:<%= node.cfc.user %> $WEBAPP 
+    chown <%= node.tomcat.user %>:<%= node.tomcat.user %> $WEBAPP 
     rm -rf $TEMP_WAR_LOCATION
 done
 
