4698: create chef recipe to install EM OS and Tomcat agents
Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/4698

--- a/site-cookbooks/cfc_server/templates/default/server.xml.erb
+++ b/site-cookbooks/cfc_server/templates/default/server.xml.erb
@@ -36,6 +36,7 @@
   <!-- JMX Support for the Tomcat server. Documentation at /docs/non-existent.html -->
   <Listener className="org.apache.catalina.mbeans.ServerLifecycleListener" />
   <Listener className="org.apache.catalina.mbeans.GlobalResourcesLifecycleListener" />
+  <%= node["cfc"]["server"]["tomcat"]["jmx_config"] %>
 
   <!-- Global JNDI resources
        Documentation at /docs/jndi-resources-howto.html
