* support additional hub config properties per environment * fix error message when stopping addtional tomcat in oracle linux
https://q.tasktop.com/alm/#projects/c2c/task/4688

--- a/site-cookbooks/cfc_hub/templates/default/profile.properties.erb
+++ b/site-cookbooks/cfc_hub/templates/default/profile.properties.erb
@@ -27,3 +27,7 @@ github.consumerSecret=<%= node.cfc.github.consumer_secret %>
 
 github.textEncryptor.password=ThisIsMyGiantPassword.ItDoesntMakeSenseButThisIsIt
 github.textEncryptor.salt=CAFEBABE00DEADBEEF00214748364700FACE0FFEE7
+
+<% for prop in node.cfc.hub.additional_properties %>
+<%= prop %>
+<% end %>
