Allow to configure arbitrary etc/host entries Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/4716

--- a/src/main/chef/cookbooks/etchosts/templates/default/hosts.erb
+++ b/src/main/chef/cookbooks/etchosts/templates/default/hosts.erb
@@ -6,6 +6,8 @@
 ::1 localhost    
 <% end %>
 
-
+<% for @entry in node[:etchosts][:entries] %>
+<%= @entry %>
+<% end %>
 
 <%= "#{node[:cfc][:hosts][:hub][:ipaddress]}     #{cfc_role_address("profile")}" %>
