4716: Disable hudson outgoing mail
Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/4716

--- a/src/main/chef/cookbooks/cfc_hmaster/templates/default/hudson.tasks.Mailer.xml.erb
+++ b/src/main/chef/cookbooks/cfc_hmaster/templates/default/hudson.tasks.Mailer.xml.erb
@@ -4,7 +4,7 @@
   <adminAddress>Code2Cloud Builder &lt;noreply@tasktop.com&gt;</adminAddress>
   <useSsl><%= node.cfc.mail_sender.starttls %></useSsl>
   <charset>UTF-8</charset>
-  <smtpHost><%= node.cfc.mail_sender.host %></smtpHost>
-  <smtpAuthUsername><%= node.cfc.mail_sender.username %></smtpAuthUsername>
-  <smtpAuthPassword><%= node.cfc.mail_sender.password %></smtpAuthPassword>
+  <smtpHost>DISABLED</smtpHost>
+  <smtpAuthUsername>DISABLED</smtpAuthUsername>
+  <smtpAuthPassword>DISABLED</smtpAuthPassword>
 </hudson.tasks.Mailer_-DescriptorImpl>
