4935: Configure slaves .m2/settings with proxy config if needed
Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/4935

--- a/src/main/chef/cookbooks/cfc/templates/default/environment.erb
+++ b/src/main/chef/cookbooks/cfc/templates/default/environment.erb
@@ -1,10 +1,10 @@
 <% if node["cfc"]["proxy_environment"]["http_proxy"] -%>
-HTTP_PROXY=<%= node["cfc"]["proxy_environment"]["http_proxy"] %>
-http_proxy=<%= node["cfc"]["proxy_environment"]["http_proxy"] %>
+HTTP_PROXY=<%= node["cfc"]["proxy_environment"]["http_proxy"] %>:<%= node["cfc"]["proxy_environment"]["http_proxy_port"] %>
+http_proxy=<%= node["cfc"]["proxy_environment"]["http_proxy"] %>:<%= node["cfc"]["proxy_environment"]["http_proxy_port"] %>
 <%- end %>
 <% if node["cfc"]["proxy_environment"]["https_proxy"] -%>
-HTTPS_PROXY=<%= node["cfc"]["proxy_environment"]["https_proxy"] %>
-https_proxy=<%= node["cfc"]["proxy_environment"]["https_proxy"] %>
+HTTPS_PROXY=<%= node["cfc"]["proxy_environment"]["https_proxy"] %>:<%= node["cfc"]["proxy_environment"]["https_proxy_port"] %>
+https_proxy=<%= node["cfc"]["proxy_environment"]["https_proxy"] %>:<%= node["cfc"]["proxy_environment"]["https_proxy_port"] %>
 <%- end %>
 <% if node["cfc"]["proxy_environment"]["no_proxy_prefix"] -%>
 NO_PROXY=<%= node["cfc"]["proxy_environment"]["no_proxy_prefix"] %><%= cfc_role_address("profile") %>,<%= cfc_role_address("profile") %>
