--- a/src/main/chef/cookbooks/cfc_hslave/templates/default/m2_settings.xml.erb
+++ b/src/main/chef/cookbooks/cfc_hslave/templates/default/m2_settings.xml.erb
@@ -2,6 +2,7 @@
 <settings xmlns="http://maven.apache.org/settings/1.0.0" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+<!-- This file is geneated by Chef -->
  <localRepository>/home/c2c/m2/repository</localRepository>
  <% if  node.cfc.nexus.enable -%>
  <profiles>
@@ -32,4 +33,32 @@
     <activeProfile>nexus</activeProfile>
   </activeProfiles>
 <% end -%>
+<proxies>
+<% if node["cfc"]["proxy_environment"]["http_proxy"] -%>
+   <proxy>
+      <active>true</active>
+      <protocol>http</protocol>
+      <host><%= node["cfc"]["proxy_environment"]["http_proxy"] %></host>
+      <port><%= node["cfc"]["proxy_environment"]["http_proxy_port"] %></port>
+      <% if node["cfc"]["proxy_environment"]["no_proxy_prefix"] -%>
+   	  <nonProxyHosts><%= node["cfc"]["proxy_environment"]["no_proxy_prefix"] %><%= cfc_role_address("profile") %>|<%= cfc_role_address("profile") %></nonProxyHosts>
+	  <%- else %>		
+	  <nonProxyHosts><%= cfc_role_address("profile") %></nonProxyHosts>
+	  <%- end %>
+    </proxy>
+<%- end %>
+<% if node["cfc"]["proxy_environment"]["https_proxy"] -%>
+   <proxy>
+      <active>true</active>
+      <protocol>https</protocol>
+      <host><%= node["cfc"]["proxy_environment"]["https_proxy"] %></host>
+      <port><%= node["cfc"]["proxy_environment"]["https_proxy_port"] %></port>
+      <% if node["cfc"]["proxy_environment"]["no_proxy_prefix"] -%>
+   	  <nonProxyHosts><%= node["cfc"]["proxy_environment"]["no_proxy_prefix"] %><%= cfc_role_address("profile") %>|<%= cfc_role_address("profile") %></nonProxyHosts>
+	  <%- else %>		
+	  <nonProxyHosts><%= cfc_role_address("profile") %></nonProxyHosts>
+	  <%- end %>
+    </proxy>
+<%- end %>
+  </proxies>
  </settings>
