--- a/src/main/chef/cookbooks/etchosts/templates/default/hosts.erb
+++ b/src/main/chef/cookbooks/etchosts/templates/default/hosts.erb
@@ -5,9 +5,9 @@
 <% if node[:kernel][:modules][:ipv6] %>
 ::1 localhost    
 <% end %>
-
 <% for @entry in node[:etchosts][:entries] %>
 <%= @entry %>
 <% end %>
-
+<% if node[:etchosts][:hub_entry] %>
 <%= "#{node[:cfc][:hosts][:hub][:ipaddress]}     #{cfc_role_address("profile")}" %>
+<% end %>
