--- a/src/main/chef/cookbooks/c2c_hmaster/templates/default/hmaster.properties.erb
+++ b/src/main/chef/cookbooks/c2c_hmaster/templates/default/hmaster.properties.erb
@@ -1,3 +1,3 @@
 alm.rootDir=<%= node.c2c.server.opt %>
 alm.dataDir=<%= node.c2c.server.home %>
-alm.hudson.path=<%= node.c2c.hudson.path %>
+alm.hudson.path=/<%= node.c2c.hudson.path %>/
