5014: Build up OSS all-in-one VM
Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/5014

--- a/src/main/chef/cookbooks/c2c_db/templates/default/grants.sql.erb
+++ b/src/main/chef/cookbooks/c2c_db/templates/default/grants.sql.erb
@@ -1,7 +1,10 @@
 GRANT ALL PRIVILEGES ON <%= @database %>.* TO 'profile'@'%' IDENTIFIED BY '<%= node.c2c.mysql_pw.profile %>';
+GRANT ALL PRIVILEGES ON <%= @database %>.* TO 'profile'@'localhost' IDENTIFIED BY '<%= node.c2c.mysql_pw.profile %>';
 
 GRANT ALL PRIVILEGES ON `%_tasks`.* TO 'tasks'@'%' IDENTIFIED BY '<%= node.c2c.mysql_pw.tasks %>';
+GRANT ALL PRIVILEGES ON `%_tasks`.* TO 'tasks'@'localhost' IDENTIFIED BY '<%= node.c2c.mysql_pw.tasks %>';
 
 GRANT ALL PRIVILEGES ON `%_wiki`.* TO 'wiki'@'%' IDENTIFIED BY '<%= node.c2c.mysql_pw.wiki %>';
+GRANT ALL PRIVILEGES ON `%_wiki`.* TO 'wiki'@'localhost' IDENTIFIED BY '<%= node.c2c.mysql_pw.wiki %>';
 
 FLUSH PRIVILEGES;
