--- a/src/main/chef/cookbooks/c2c_scm/templates/default/server.xml.erb
+++ b/src/main/chef/cookbooks/c2c_scm/templates/default/server.xml.erb
@@ -153,4 +153,21 @@
       </Host>
     </Engine>
   </Service>
+  <% if node["tomcat"]["second_service"] %>
+  <!--- Second Service -->
+    <Service name="Catalina2">
+
+    <Connector port="<%= node["tomcat"]["second_port"] %>" protocol="HTTP/1.1" 
+               connectionTimeout="20000" 
+               URIEncoding="UTF-8" />
+    <Engine name="Catalina2" defaultHost="localhost2">
+
+      <Host name="localhost2"  appBase="second_webapps"
+            unpackWARs="true" autoDeploy="true"
+            xmlValidation="false" xmlNamespaceAware="false">
+
+      </Host>
+    </Engine>
+  </Service>
+ <% end %>
 </Server>
