--- a/src/main/chef/cookbooks/c2c_db/templates/default/grants.sql.erb
+++ b/src/main/chef/cookbooks/c2c_db/templates/default/grants.sql.erb
@@ -1,10 +1,10 @@
-GRANT ALL PRIVILEGES ON <%= @database %>.* TO 'profile'@'%' IDENTIFIED BY '<%= node.c2c.mysql_pw.profile %>';
-GRANT ALL PRIVILEGES ON <%= @database %>.* TO 'profile'@'localhost' IDENTIFIED BY '<%= node.c2c.mysql_pw.profile %>';
+GRANT ALL PRIVILEGES ON <%= @database %>.* TO 'profile'@'%' IDENTIFIED BY '<%= @profilePwd %>';
+GRANT ALL PRIVILEGES ON <%= @database %>.* TO 'profile'@'localhost' IDENTIFIED BY '<%= @profilePwd %>';
 
-GRANT ALL PRIVILEGES ON `%_tasks`.* TO 'tasks'@'%' IDENTIFIED BY '<%= node.c2c.mysql_pw.tasks %>';
-GRANT ALL PRIVILEGES ON `%_tasks`.* TO 'tasks'@'localhost' IDENTIFIED BY '<%= node.c2c.mysql_pw.tasks %>';
+GRANT ALL PRIVILEGES ON `%_tasks`.* TO 'tasks'@'%' IDENTIFIED BY '<%= @tasksPwd %>';
+GRANT ALL PRIVILEGES ON `%_tasks`.* TO 'tasks'@'localhost' IDENTIFIED BY '<%= @tasksPwd %>';
 
-GRANT ALL PRIVILEGES ON `%_wiki`.* TO 'wiki'@'%' IDENTIFIED BY '<%= node.c2c.mysql_pw.wiki %>';
-GRANT ALL PRIVILEGES ON `%_wiki`.* TO 'wiki'@'localhost' IDENTIFIED BY '<%= node.c2c.mysql_pw.wiki %>';
+GRANT ALL PRIVILEGES ON `%_wiki`.* TO 'wiki'@'%' IDENTIFIED BY '<%= @wikiPwd %>';
+GRANT ALL PRIVILEGES ON `%_wiki`.* TO 'wiki'@'localhost' IDENTIFIED BY '<%= @wikiPwd %>';
 
 FLUSH PRIVILEGES;
