--- a/src/main/chef/cookbooks/c2c_hub/templates/default/profile.properties.erb
+++ b/src/main/chef/cookbooks/c2c_hub/templates/default/profile.properties.erb
@@ -9,7 +9,7 @@ profile.serviceProxy.path=<%= node.c2c.hub.service_proxy_path %>
 ssh.server.publicPort=<%= node.c2c.hub.public_ssh_port %>
 ssh.server.port=<%= node.c2c.hub.internal_ssh_port %>
 
-alm.database.password=<%= node.c2c.mysql_pw.profile %>
+alm.database.password=<%= @profilePwd %>
 alm.database.url=jdbc\:<%= node.c2c.server.jdbc_type %>//<%= c2c_role_address("db") %>\:<%= node.c2c.server.jdbc_port %><%= node.c2c.hub.jdbc_path %>
 alm.database.username=profile
 
@@ -17,13 +17,13 @@ alm.mailSender.javaMailProperties[mail.smtp.starttls.enable]=<%= node.c2c.mail_s
 alm.mailSender.port=<%= node.c2c.mail_sender.port %>
 alm.mailSender.host=<%= node.c2c.mail_sender.host %>
 alm.mailSender.username=<%= node.c2c.mail_sender.username %>
-alm.mailSender.password=<%= node.c2c.mail_sender.password %>
+alm.mailSender.password=<%= @c2c_mail_sender_password %>
 alm.mailSender.from=<%= node.c2c.mail_sender.from %>
 
 alm.rememberMeServices.key=<%= node.c2c.hub.remember_me_key %>
 
 github.consumerKey=<%= node.c2c.github.consumer_key %>
-github.consumerSecret=<%= node.c2c.github.consumer_secret %>
+github.consumerSecret=<%= @github_consumer_secret %>
 
 github.textEncryptor.password=ThisIsMyGiantPassword.ItDoesntMakeSenseButThisIsIt
 github.textEncryptor.salt=CAFEBABE00DEADBEEF00214748364700FACE0FFEE7
