--- a/src/main/chef/cookbooks/c2c_task/templates/default/task.properties.erb
+++ b/src/main/chef/cookbooks/c2c_task/templates/default/task.properties.erb
@@ -6,10 +6,10 @@ profile.prefix.path=<%= node.c2c.hub.prefix_path %>
 
 database.host=<%= c2c_role_address("db") %>
 
-task.database.password=<%= node.c2c.mysql_pw.tasks %>
+task.database.password=<%= @tasksPwd %>
 task.database.url=jdbc\:<%= node.c2c.server.jdbc_type %>//<%= c2c_role_address("db") %>\:<%= node.c2c.server.jdbc_port %><%= node.c2c.server.jdbc_path %>
 task.database.username=<%= node.c2c.db.task.username %>
 
-wiki.database.password=<%= node.c2c.mysql_pw.wiki %>
+wiki.database.password=<%= @wikiPwd %>
 wiki.database.url=jdbc\:<%= node.c2c.server.jdbc_type %>//<%= c2c_role_address("db") %>\:<%= node.c2c.server.jdbc_port %><%= node.c2c.server.jdbc_path %>
 wiki.database.username=<%= node.c2c.db.wiki.username %>
