5088: configure code2cloud.log rotation
Task-URL: https://q.tasktop.com/alm/#projects/c2c/task/5088
Change-Id: I15c8abd983ff6947576cf44966fa1542aecb9e88

--- a/src/main/chef/cookbooks/c2c_server/templates/default/log4j.xml.erb
+++ b/src/main/chef/cookbooks/c2c_server/templates/default/log4j.xml.erb
@@ -7,21 +7,16 @@
 	<!-- ============================== -->
 	<!-- Appenders -->
 	<!-- ============================== -->
-
-	<!-- Provides Console Logging -->
-	<appender name="CONSOLE" class="org.apache.log4j.ConsoleAppender">
-		<param name="Target" value="System.out" />
-
-		<layout class="org.apache.log4j.PatternLayout">
-			<param name="ConversionPattern" value="%d %-5p [%t] [%c@%L] %m%n" />
-		</layout>
-	</appender>
 	
 	<!--  Provides File Logging  -->
-	<appender name="FILE" class="org.apache.log4j.FileAppender">
-		<param name="File" value="${catalina.base}/logs/code2cloud.log" />
+	<appender name="FILE" class="org.apache.log4j.rolling.RollingFileAppender">
+		<param name="File" value="${catalina.base}/logs/code2cloud-<%= @type %>.log" />
 		<param name="Append" value="true" />
 
+    <rollingPolicy class="org.apache.log4j.rolling.TimeBasedRollingPolicy">
+      <param name="FileNamePattern" value="${catalina.base}/logs/code2cloud-<%= @type %>.%d.log" />
+    </rollingPolicy>
+		
 		<layout class="org.apache.log4j.PatternLayout">
 			<param name="ConversionPattern" value="%d %-5p [%t] [%c@%L] %m%n" />
 		</layout>
@@ -59,11 +54,6 @@
 	<root>
 		<level value="INFO" />
 		<appender-ref ref="FILE" />
-		<% if node.c2c.server.email_log_errors_to_admin %>
-		<appender-ref ref="EMAIL" />
-		<% end %>
-		
-		
 	</root>
 
 </log4j:configuration>
